--- a/pollingo/src/Console.scss
+++ b/pollingo/src/Console.scss
@@ -4,13 +4,11 @@
     background-color: rgb(250, 193, 193);
 
     .console-name {
-
-
+        color: purple;
     }
 
     .console-desc {
         color: green;       
     }
-
 
 }
