--- a/pollingo/src/PollBox.scss
+++ b/pollingo/src/PollBox.scss
@@ -1,6 +1,24 @@
+$colors:(
+    primary-1: rgb(83, 82, 5),
+    primary-2: rgb(83, 82, 5),
+    secondary-1: rgb(177, 177, 37),
+    secondary-2: rgb(177, 177, 37),    
+    accent-1: rgb(131, 28, 156),
+    accent-2: rgb(131, 28, 156),
+    background-1: rgb(211, 207, 149),
+    background-2: white,
+    pb-header-bg-1: rgb(96, 60, 104),
+    pb-main-bg-1: rgb(135, 207, 231),
+    pb-aside-bg-1: rgb(140, 171, 240),
+    pb-nav-bg-1:  rgb(80, 127, 214),
+    pb-footer-bg-1: rgb(135, 111, 240)
+);
+
+@function getColor($color-name) {
+    @return map-get($colors, $color-name)
+}
 
 .pollbox-1 {
-
     border: 1px solid black;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
@@ -31,7 +49,7 @@
 
     header{
         grid-area: header;
-        background-color: teal;
+        background-color: getColor(pb-header-bg-1);
 
         @media(max-width: 400px){
             border: 10px solid rgb(180, 56, 7);
@@ -50,25 +68,18 @@
     }
     nav{
         grid-area: nav;
-        background-color: tomato;
+        background-color: getColor(pb-nav-bg-1);
     }
     main{
         grid-area: main;
-        background-color: lightblue;
+        background-color: getColor(pb-main-bg-1);
     }
     aside{
         grid-area: aside;
-        background-color: orange;
+        background-color: getColor(pb-aside-bg-1);
     }
     footer{
         grid-area: footer;
-        background-color: lightgreen;
+        background-color: getColor(pb-footer-bg-1);
     }
 }
-
-
-/* 
-@media(max-width: 480px){
-    display: block;
-}
-*/
