--- a/pollingo/src/PollBox.css
+++ b/pollingo/src/PollBox.css
@@ -34,7 +34,7 @@
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: header;
-  background-color: #603c68;
+  background-color: #e19af0;
 }
 
 @media (max-width: 400px) {
