new adds. thinking about changing projects

--- a/pollingo/src/PollBox.css
+++ b/pollingo/src/PollBox.css
@@ -8,9 +8,21 @@
       grid-template-columns: 1fr 8fr 4fr;
       grid-template-areas: "header main aside" "nav main aside" "footer main aside";
   grid-gap: .20em;
-  width: 500px;
-  margin: 25px;
+  margin: 25px 5px 25px 5px;
   padding: 5px;
+  width: 85%;
+}
+
+@media screen and (min-width: 767px) {
+  .pollbox-1 {
+    width: 80%;
+  }
+}
+
+@media screen and (min-width: 1443px) {
+  .pollbox-1 {
+    width: 500px;
+  }
 }
 
 @media (max-width: 400px) {
