--- a/pollingo/src/PollBox.css
+++ b/pollingo/src/PollBox.css
@@ -13,9 +13,21 @@
   width: 85%;
 }
 
+@media screen and (min-width: 639px) {
+  .pollbox-1 {
+    width: 50%;
+  }
+}
+
 @media screen and (min-width: 767px) {
   .pollbox-1 {
-    width: 80%;
+    width: 60%;
+  }
+}
+
+@media screen and (min-width: 1023px) {
+  .pollbox-1 {
+    width: 70%;
   }
 }
 
@@ -25,20 +37,9 @@
   }
 }
 
-@media (max-width: 400px) {
+@media screen and (min-width: 1680px) {
   .pollbox-1 {
-    border: 10px solid #df0e0e;
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-rows: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
-    -ms-grid-columns: 1fr 8fr 4fr;
-        grid-template-columns: 1fr 8fr 4fr;
-        grid-template-areas: "header main aside" "nav main aside" "footer main aside";
-    grid-gap: .20em;
-    width: 500px;
-    margin: 25px;
-    padding: 5px;
+    width: 80%;
   }
 }
 
@@ -47,23 +48,6 @@
   -ms-grid-column: 1;
   grid-area: header;
   background-color: #e19af0;
-}
-
-@media (max-width: 400px) {
-  .pollbox-1 header {
-    border: 10px solid #b43807;
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-rows: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
-    -ms-grid-columns: 1fr 8fr 4fr;
-        grid-template-columns: 1fr 8fr 4fr;
-        grid-template-areas: "header main aside" "nav main aside" "footer main aside";
-    grid-gap: .20em;
-    width: 500px;
-    margin: 25px;
-    padding: 5px;
-  }
 }
 
 .pollbox-1 nav {
