--- a/pollingo/src/PollBox.css
+++ b/pollingo/src/PollBox.css
@@ -1,16 +1,16 @@
 .pollbox-1 {
   border: 1px solid black;
+  margin: 25px 5px 25px 5px;
+  padding: 5px;
+  width: 85%;
   display: -ms-grid;
   display: grid;
+  grid-gap: .20em;
   -ms-grid-rows: 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr 1fr;
   -ms-grid-columns: 1fr 8fr 4fr;
       grid-template-columns: 1fr 8fr 4fr;
       grid-template-areas: "header main aside" "nav main aside" "footer main aside";
-  grid-gap: .20em;
-  margin: 25px 5px 25px 5px;
-  padding: 5px;
-  width: 85%;
 }
 
 @media screen and (min-width: 639px) {
@@ -48,6 +48,8 @@
   -ms-grid-column: 1;
   grid-area: header;
   background-color: #e19af0;
+  border: 1px solid black;
+  margin: auto;
 }
 
 .pollbox-1 nav {
@@ -55,6 +57,8 @@
   -ms-grid-column: 1;
   grid-area: nav;
   background-color: #507fd6;
+  border: 2px dashed grey;
+  margin: auto;
 }
 
 .pollbox-1 main {
@@ -63,6 +67,7 @@
   -ms-grid-column: 2;
   grid-area: main;
   background-color: #87cfe7;
+  border: 2px dashed grey;
 }
 
 .pollbox-1 aside {
@@ -71,6 +76,8 @@
   -ms-grid-column: 3;
   grid-area: aside;
   background-color: #8cabf0;
+  border: 2px dashed grey;
+  margin: auto;
 }
 
 .pollbox-1 footer {
@@ -78,5 +85,7 @@
   -ms-grid-column: 1;
   grid-area: footer;
   background-color: #876ff0;
+  border: 2px dashed grey;
+  margin: auto;
 }
 /*# sourceMappingURL=PollBox.css.map */
