--- a/pollingo/src/util_variables.scss
+++ b/pollingo/src/util_variables.scss
@@ -7,8 +7,8 @@ $colors:(
     accent-1: rgb(131, 28, 156),
     accent-2: rgb(131, 28, 156),
     background-1: rgb(211, 207, 149),
-    background-2: rgb(255, 244, 244)
-    pb-header-bg-1: rgb(225, 154, 240),
+    background-2: rgb(255, 244, 244),
+    pb-header-bg-1: rgb(123, 77, 133),
     pb-main-bg-1: rgb(135, 207, 231),
     pb-aside-bg-1: rgb(140, 171, 240),
     pb-nav-bg-1:  rgb(80, 127, 214),
