--- a/pollingo/src/util_variables.scss
+++ b/pollingo/src/util_variables.scss
@@ -16,7 +16,7 @@ $colors:(
 );
 
 $sizes: (
-    pb-border-1: 1px solid black,
-    pb-border-2: 2px dashed grey,
+    pb-border-1: 1px solid rgb(129, 64, 64),
+    pb-border-2: 2px dashed rgb(41, 79, 182),
     pb-border-3: 3px solid pink
 );
