--- a/pollingo/src/PollBox.css
+++ b/pollingo/src/PollBox.css
@@ -13,35 +13,35 @@
       grid-template-areas: "header main aside" "nav main aside" "footer main aside";
 }
 
-@media screen and (min-width: 639px) {
+@media screen and (min-width: 39.9375em) {
   .pollbox-1 {
     background-color: #7b4d85;
     width: 50%;
   }
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 47.9375em) {
   .pollbox-1 {
     background-color: #7b4d85;
     width: 60%;
   }
 }
 
-@media screen and (min-width: 1023px) {
+@media screen and (min-width: 63.9375em) {
   .pollbox-1 {
     background-color: #876ff0;
     width: 70%;
   }
 }
 
-@media screen and (min-width: 1443px) {
+@media screen and (min-width: 90.1875em) {
   .pollbox-1 {
     background-color: #87cfe7;
     width: 500px;
   }
 }
 
-@media screen and (min-width: 1680px) {
+@media screen and (min-width: 105em) {
   .pollbox-1 {
     background-color: #7b4d85;
     width: 80%;
@@ -53,7 +53,7 @@
   -ms-grid-column: 1;
   grid-area: header;
   background-color: #7b4d85;
-  border: 1px solid black;
+  border: 1px solid #814040;
   margin: auto;
 }
 
@@ -62,7 +62,7 @@
   -ms-grid-column: 1;
   grid-area: nav;
   background-color: #507fd6;
-  border: 2px dashed grey;
+  border: 2px dashed #294fb6;
   margin: auto;
 }
 
@@ -72,7 +72,7 @@
   -ms-grid-column: 2;
   grid-area: main;
   background-color: #87cfe7;
-  border: 2px dashed grey;
+  border: 2px dashed #294fb6;
 }
 
 .pollbox-1 aside {
@@ -81,7 +81,7 @@
   -ms-grid-column: 3;
   grid-area: aside;
   background-color: #8cabf0;
-  border: 2px dashed grey;
+  border: 2px dashed #294fb6;
   margin: auto;
 }
 
@@ -90,7 +90,7 @@
   -ms-grid-column: 1;
   grid-area: footer;
   background-color: #876ff0;
-  border: 2px dashed grey;
+  border: 2px dashed #294fb6;
   margin: auto;
 }
 /*# sourceMappingURL=PollBox.css.map */
