--- a/pollingo/src/util_mixins.scss
+++ b/pollingo/src/util_mixins.scss
@@ -2,31 +2,31 @@
 @mixin screenSizeBp($point) {
 
     @if $point == min-extraextralarge {
-        @media screen and (min-width: 1680px) {
+        @media screen and (min-width: calcEm(1680px)) {
             @content;
         }
     }
 
     @else if $point == min-extralarge {
-        @media screen and (min-width: 1443px) {
+        @media screen and (min-width: calcEm(1443px)) {
             @content;
         }
     }
 
     @else if $point == min-large {
-        @media screen and (min-width: 1023px) {
+        @media screen and (min-width: calcEm(1023px)) {
             @content;
         }
     }
 
     @else if $point == min-medium {
-        @media screen and (min-width: 767px) {
+        @media screen and (min-width: calcEm(767px)) {
             @content;
         }
     }
     
     @else if $point == min-small {
-        @media screen and (min-width: 639px) {
+        @media screen and (min-width: calcEm(639px)) {
             @content;
         }
     }
