--- a/pollingo/src/scss/PollBox.scss
+++ b/pollingo/src/scss/PollBox.scss
@@ -35,7 +35,7 @@
     }
 
     // view size small 1/6
-    border: 1px solid black;
+    border: 1px solid rgb(185, 95, 95);
     margin: 25px 5px 25px 5px;
     padding: 5px;
     width: 95%;
