--- a/pollingo/src/css/Console.css
+++ b/pollingo/src/css/Console.css
@@ -4,31 +4,31 @@
   padding: 5px;
 }
 
-@media screen and (min-width: 639px) {
+@media screen and (min-width: 39.9375em) {
   .console {
     width: 50%;
   }
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 47.9375em) {
   .console {
     width: 60%;
   }
 }
 
-@media screen and (min-width: 1023px) {
+@media screen and (min-width: 63.9375em) {
   .console {
     width: 70%;
   }
 }
 
-@media screen and (min-width: 1443px) {
+@media screen and (min-width: 90.1875em) {
   .console {
     width: 500px;
   }
 }
 
-@media screen and (min-width: 1680px) {
+@media screen and (min-width: 105em) {
   .console {
     width: 80%;
   }
