--- a/pollingo/src/scss/Header.scss
+++ b/pollingo/src/scss/Header.scss
@@ -2,6 +2,37 @@
 @import "util_functions";
 @import "util_mixins";
 
-.main {
-    background-color: red;
+.header {
+
+    background-color: rgb(216, 194, 253);
+    margin: 5px 0px 5px 0px;
+    padding: 5px;
+
+    display: grid;
+    grid-gap: .20em;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: 
+        "header main aside";
+
+    header{
+        grid-area: header;
+        background-color: getColor(pb-header-bg-1);
+        border: getSize(pb-border-1);
+        margin: auto;
+    }
+
+    main{
+        grid-area: main;
+        background-color: getColor(pb-header-bg-1);
+        border: getSize(pb-border-1);
+    }
+
+    aside{
+        grid-area: aside;
+        background-color: getColor(pb-header-bg-1);
+        border: getSize(pb-border-1);
+        margin: auto;        
+    }
+
 }
