--- a/pollingo/src/css/Header.css
+++ b/pollingo/src/css/Header.css
@@ -1,14 +1,14 @@
 .header {
   background-color: #d8c2fd;
-  margin: 5px 0px 5px 0px;
+  margin: 0px 0px 5px 0px;
   padding: 5px;
   display: -ms-grid;
   display: grid;
   grid-gap: .20em;
   -ms-grid-rows: 1fr;
       grid-template-rows: 1fr;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-columns: 3fr 1fr;
+      grid-template-columns: 3fr 1fr;
       grid-template-areas: "header main aside";
 }
 
@@ -18,15 +18,7 @@
   grid-area: header;
   background-color: #d000ff;
   border: 1px solid black;
-  margin: auto;
-}
-
-.header main {
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
-  grid-area: main;
-  background-color: #d000ff;
-  border: 1px solid black;
+  margin: 10px 10px 10px 10px;
 }
 
 .header aside {
