--- a/pollingo/src/css/PollBox.css
+++ b/pollingo/src/css/PollBox.css
@@ -1,15 +1,15 @@
 .pollbox-1 {
-  margin: 25px 5px 25px 5px;
+  margin: 55px 5px 25px 5px;
   padding: 5px;
   width: 95%;
   display: -ms-grid;
   display: grid;
   grid-gap: .20em;
-  -ms-grid-rows: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr;
-  -ms-grid-columns: 1fr 8fr 4fr;
-      grid-template-columns: 1fr 8fr 4fr;
-      grid-template-areas: "header main aside" "nav main aside" "footer main aside";
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+  -ms-grid-columns: 18fr 1fr 1fr;
+      grid-template-columns: 18fr 1fr 1fr;
+      grid-template-areas: "main main aside" "main main aside" "footer footer footer";
 }
 
 @media screen and (min-width: 39.9375em) {
@@ -48,8 +48,6 @@
 }
 
 .pollbox-1 header {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
   grid-area: header;
   background-color: #d000ff;
   border: 1px solid black;
@@ -57,8 +55,6 @@
 }
 
 .pollbox-1 nav {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
   grid-area: nav;
   background-color: #d000ff;
   border: 1px solid black;
@@ -67,8 +63,9 @@
 
 .pollbox-1 main {
   -ms-grid-row: 1;
-  -ms-grid-row-span: 3;
-  -ms-grid-column: 2;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-area: main;
   background-color: #d000ff;
   border: 1px solid black;
@@ -76,7 +73,7 @@
 
 .pollbox-1 aside {
   -ms-grid-row: 1;
-  -ms-grid-row-span: 3;
+  -ms-grid-row-span: 2;
   -ms-grid-column: 3;
   grid-area: aside;
   background-color: #d000ff;
@@ -87,9 +84,9 @@
 .pollbox-1 footer {
   -ms-grid-row: 3;
   -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
   grid-area: footer;
   background-color: #d000ff;
   border: 1px solid black;
-  margin: auto;
 }
 /*# sourceMappingURL=PollBox.css.map */
