--- a/pollingo/src/css/PollBox.css
+++ b/pollingo/src/css/PollBox.css
@@ -86,7 +86,45 @@
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-area: footer;
-  background-color: #d000ff;
   border: 1px solid black;
+}
+
+.pollbox-1 .tabContainer {
+  width: 100%;
+  height: 350px;
+}
+
+.pollbox-1 .tabContainer .buttonContainer {
+  height: 15%;
+}
+
+.pollbox-1 .tabContainer .buttonContainer button {
+  width: 25%;
+  height: 100%;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 10px;
+  font-family: sans-serif;
+  font-size: 18px;
+  background-color: grey;
+}
+
+.pollbox-1 .tabContainer .buttonContainer button:hover {
+  background-color: white;
+}
+
+.pollbox-1 .tabContainer .tabPanel {
+  height: 85%;
+  background-color: grey;
+  color: white;
+  text-align: center;
+  padding-top: 105px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: sans-serif;
+  font-size: 22px;
+  display: none;
 }
 /*# sourceMappingURL=PollBox.css.map */
