trying to get the tab function working, thinking of just adding an event listener

--- a/pollingo/src/scss/PollBox.scss
+++ b/pollingo/src/scss/PollBox.scss
@@ -98,11 +98,11 @@
                 padding: 10px;
                 font-family: sans-serif;
                 font-size: 18px;
-                background-color: grey;
+                background-color: rgb(255, 145, 145);
             }
 
             button:hover {
-                background-color: white;
+                background-color: rgb(255, 104, 104);
             }
         }
         .tabPanel {
