--- a/pollingo/src/sass/_util_variables.sass
+++ b/pollingo/src/sass/_util_variables.sass
@@ -13,15 +13,15 @@ $colors:(
     pb-aside-bg-1: rgb(251, 253, 255),
     pb-nav-bg-1:  rgb(255, 255, 255),
     pb-footer-bg-1: rgb(255, 255, 255)
-);
+)
 
 $sizes: (
     pb-border-1: 1px solid rgb(0, 0, 0),
     pb-border-2: 2px dashed rgb(255, 255, 255),
     pb-border-3: 3px solid rgb(255, 255, 255)
-);
+)
 
-@function getColor($color-name) {
-    @return map-get($colors, $color-name);
-}
+@function getColor($color-name) 
+    @return map-get($colors, $color-name)
+
 
