converting scss to sass

--- a/pollingo/src/sass/PollBox.sass
+++ b/pollingo/src/sass/PollBox.sass
@@ -1,6 +1,4 @@
-@import "util_variables"
-@import "util_functions"
-@import "util_mixins"
+@import "util_variables", "util_functions", "util_mixins"
 
 .pollbox-1 
     // view size small 2/6    
