--- a/pollingo/src/scss/main.scss
+++ b/pollingo/src/scss/main.scss
@@ -1,2 +1,38 @@
 
+
+// HELPERS
+@import '_util_functions.scss'
+@import '_util_mixins.scss'
+@import '_util_variables.scss'
+
+
+// TOOLS
+
+
+
+// BASICS
+
+
+
+// LAYOUT
+
+
+
+
+// MODULES
+
+
+
+// PAGES
+
+
+
+
+
+// OTHER
+
+@import 'Console.scss'
+@import 'Header.scss'
 @import 'PollBox.scss' 
+@import 'ToggleRankedVoting.scss'
+
