file org. adding some template orgs

--- a/pollingo/src/scss/main.scss
+++ b/pollingo/src/scss/main.scss
@@ -1,6 +1,6 @@
 
 // HELPERS
-@import '_util_functions.scss';
+@import '1-helpers/_util_functions.scss';
 @import '_util_mixins.scss';
 @import '_util_variables.scss';
 
