--- a/pollingo/src/scss/5-modules/PollBox.scss
+++ b/pollingo/src/scss/5-modules/PollBox.scss
@@ -1,6 +1,6 @@
-@import "util_variables";
-@import "util_functions";
-@import "util_mixins";
+@import "../1-helpers/_util_variables";
+@import "../1-helpers/_util_functions";
+@import "../1-helpers/_util_mixins";
 
 .pollbox-1 {
 
