--- a/pollingo/src/css/Header.css
+++ b/pollingo/src/css/Header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #d8c2fd;
+  background-color: #6c20ee;
   padding: 5px;
   display: -ms-grid;
   display: grid;
@@ -11,6 +11,36 @@
       grid-template-areas: "header main aside";
 }
 
+@media screen and (min-width: 39.9375em) {
+  .header {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 47.9375em) {
+  .header {
+    width: 60%;
+  }
+}
+
+@media screen and (min-width: 63.9375em) {
+  .header {
+    width: 70%;
+  }
+}
+
+@media screen and (min-width: 90.1875em) {
+  .header {
+    width: 500px;
+  }
+}
+
+@media screen and (min-width: 105em) {
+  .header {
+    width: 80%;
+  }
+}
+
 .header header {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
@@ -18,6 +48,12 @@
   background-color: #d000ff;
   border: 1px solid black;
   margin: 0px auto 0px 0px;
+}
+
+.header main {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: main;
 }
 
 .header aside {
