--- a/pollingo/src/css/PollBox.css
+++ b/pollingo/src/css/PollBox.css
@@ -108,11 +108,11 @@
   padding: 10px;
   font-family: sans-serif;
   font-size: 18px;
-  background-color: #ff9191;
+  background-color: #e47878;
 }
 
 .pollbox-1 .tabContainer .buttonContainer button:hover {
-  background-color: #ff6868;
+  background-color: #ff3a3a;
 }
 
 .pollbox-1 .tabContainer .tabPanel {
