--- a/pollingo/src/scss/main.scss
+++ b/pollingo/src/scss/main.scss
@@ -19,7 +19,6 @@
 
 
 // 4-LAYOUT
-@import '4-layout/Header.scss';
 @import '4-layout/_floatingShapes.scss';
 @import '4-layout/_footer.scss';
 @import '4-layout/_navigation.scss';
@@ -27,9 +26,9 @@
 @import '4-layout/_siteMainContent.scss';
 
 // 5-MODULES
-@import '5-modules/Console.scss';
-@import '5-modules/PollBox.scss' ;
-@import '5-modules/ToggleRankedVoting.scss';
+@import '5-modules/_Console.scss';
+@import '5-modules/_PollBox.scss';
+@import '5-modules/_ToggleRankedVoting.scss';
 
 // 6-PAGES
 
