structuring some css

--- a/pollingo/src/scss/1-helpers/_util_variables.scss
+++ b/pollingo/src/scss/1-helpers/_util_variables.scss
@@ -12,7 +12,8 @@ $colors:(
     pb-main-bg-1: rgb(255, 0, 76),
     pb-aside-bg-1: rgb(251, 253, 255),
     pb-nav-bg-1:  rgb(255, 255, 255),
-    pb-footer-bg-1: rgb(255, 255, 255)
+    pb-footer-bg-1: rgb(255, 255, 255),
+    pb-main-bg-xl-1: rgb(255, 198, 198)
 );
 
 
