--- a/pollingo/src/css/main.css
+++ b/pollingo/src/css/main.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #6c20ee;
+  background-color: #f38d65;
   padding: 5px;
   display: grid;
   grid-gap: .20em;
@@ -10,32 +10,20 @@
 
 @media screen and (min-width: 39.9375em) {
   .header {
-    width: 50%;
-  }
-}
-
-@media screen and (min-width: 47.9375em) {
-  .header {
-    width: 60%;
-  }
-}
-
-@media screen and (min-width: 63.9375em) {
-  .header {
-    width: 70%;
+    background-color: #d000ff;
+    width: 100%;
   }
 }
 
 @media screen and (min-width: 90.1875em) {
   .header {
+    background-color: #ff004c;
     width: 500px;
   }
 }
 
-@media screen and (min-width: 105em) {
-  .header {
-    width: 80%;
-  }
+.header h2, .header h5 {
+  margin: 0px 0px 0px 0px;
 }
 
 .header header {
@@ -68,27 +56,9 @@
   }
 }
 
-@media screen and (min-width: 47.9375em) {
-  .console {
-    width: 60%;
-  }
-}
-
-@media screen and (min-width: 63.9375em) {
-  .console {
-    width: 70%;
-  }
-}
-
 @media screen and (min-width: 90.1875em) {
   .console {
     width: 500px;
-  }
-}
-
-@media screen and (min-width: 105em) {
-  .console {
-    width: 80%;
   }
 }
 
@@ -114,35 +84,14 @@
 @media screen and (min-width: 39.9375em) {
   .pollbox-1 {
     background-color: #d000ff;
-    width: 50%;
-  }
-}
-
-@media screen and (min-width: 47.9375em) {
-  .pollbox-1 {
-    background-color: #d000ff;
-    width: 60%;
-  }
-}
-
-@media screen and (min-width: 63.9375em) {
-  .pollbox-1 {
-    background-color: #d000ff;
-    width: 70%;
+    width: 600px;
   }
 }
 
 @media screen and (min-width: 90.1875em) {
   .pollbox-1 {
-    background-color: #d000ff;
-    width: 500px;
-  }
-}
-
-@media screen and (min-width: 105em) {
-  .pollbox-1 {
-    background-color: #d000ff;
-    width: 80%;
+    background-color: #ffc6c6;
+    width: 600px;
   }
 }
 
@@ -155,14 +104,14 @@
 
 .pollbox-1 nav {
   grid-area: nav;
-  background-color: #d000ff;
+  background-color: white;
   border: 1px solid black;
   margin: auto;
 }
 
 .pollbox-1 main {
   grid-area: main;
-  background-color: #d000ff;
+  background-color: #ff004c;
   border: 1px solid black;
 }
 
@@ -180,11 +129,11 @@
 
 .pollbox-1 .tabContainer {
   width: 100%;
-  height: 350px;
+  height: 150px;
 }
 
 .pollbox-1 .tabContainer .buttonContainer {
-  height: 15%;
+  height: 20%;
 }
 
 .pollbox-1 .tabContainer .buttonContainer button {
@@ -194,7 +143,7 @@
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 10px;
+  padding: 0px;
   font-family: sans-serif;
   font-size: 18px;
   background-color: #e47878;
