--- a/pollingo/src/scss/5-modules/_Console.scss
+++ b/pollingo/src/scss/5-modules/_Console.scss
@@ -12,14 +12,12 @@
 
     // view size med 3/6    
     @include screenSizeBp(min-medium) {
-//        background-color: getColor(pb-header-bg-1);
-        width: 60%;
+        // not needed
     }
 
     // view size large 4/6    
     @include screenSizeBp(min-large) {
-//        background-color: getColor(pb-footer-bg-1);        
-        width: 70%;
+        // not needed
     }
 
     // view size xl 5/6    
@@ -30,8 +28,7 @@
 
     // view size xxl 6/6   
     @include screenSizeBp(min-extraextralarge) {
-//        background-color: getColor(pb-header-bg-1);        
-        width: 80%;
+        // not needed
     }
 
     // view size small 1/6
