--- a/pollingo/src/scss/5-modules/_PollBox.scss
+++ b/pollingo/src/scss/5-modules/_PollBox.scss
@@ -7,31 +7,28 @@
     // view size small 2/6    
     @include screenSizeBp(min-small) {
         background-color: getColor(pb-header-bg-1);        
-        width: 50%;
+        width: 600px;
     }
 
     // view size med 3/6    
     @include screenSizeBp(min-medium) {
-        background-color: getColor(pb-header-bg-1);
-        width: 60%;
+        // not needed
     }
 
     // view size large 4/6    
     @include screenSizeBp(min-large) {
-        background-color: getColor(pb-header-bg-1);        
-        width: 70%;
+        // not needed
     }
 
     // view size xl 5/6    
     @include screenSizeBp(min-extralarge) {
-        background-color: getColor(pb-header-bg-1);
-        width: 500px;
+        background-color: getColor(pb-main-bg-xl-1);
+        width: 600px;
     }
 
     // view size xxl 6/6   
     @include screenSizeBp(min-extraextralarge) {
-        background-color: getColor(pb-header-bg-1);        
-        width: 80%;
+        // not needed
     }
 
     // VIEW small 1/6
@@ -57,14 +54,14 @@
 
     nav{
         grid-area: nav;
-        background-color: getColor(pb-header-bg-1);
+        background-color: getColor(pb-nav-bg-1);
         border: getSize(pb-border-1);
         margin: auto;
     }
 
     main{
         grid-area: main;
-        background-color: getColor(pb-header-bg-1);
+        background-color: getColor(pb-main-bg-1);
         border: getSize(pb-border-1);
     }
 
@@ -77,16 +74,15 @@
 
     footer{
         grid-area: footer;
-//        background-color: getColor(pb-header-bg-1);
         border: getSize(pb-border-1);
     }
 
     .tabContainer {
         width: 100%;
-        height: 350px;
+        height: 150px;
 
         .buttonContainer {
-            height: 15%;
+            height: 20%;
             
             button {
                 width: 25%;
@@ -95,7 +91,7 @@
                 border: none;
                 outline: none;
                 cursor: pointer;
-                padding: 10px;
+                padding: 0px;
                 font-family: sans-serif;
                 font-size: 18px;
                 background-color: rgb(228, 120, 120);
