--- a/pollingo/src/scss/1-helpers/_util_variables.scss
+++ b/pollingo/src/scss/1-helpers/_util_variables.scss
@@ -13,8 +13,10 @@ $colors:(
     pb-aside-bg-1: rgb(251, 253, 255),
     pb-nav-bg-1:  rgb(255, 255, 255),
     pb-footer-bg-1: rgb(255, 255, 255),
-    pb-main-bg-xl-1: rgb(255, 198, 198)
-);
+    pb-main-bg-xl-1: rgb(255, 198, 198),
+    con-desc-1: rgb(161, 72, 21),
+    con-name-1: rgb(206, 0, 120)    
+    );
 
 
 $sizes: (
