--- a/pollingo/src/scss/5-modules/_Console.scss
+++ b/pollingo/src/scss/5-modules/_Console.scss
@@ -4,44 +4,49 @@
 
 .console {
 
-    // view size small 2/6    
+    // VIEW SIZE [sm, 2/6]    
     @include screenSizeBp(min-small) {
 //        background-color: getColor(pb-header-bg-1);        
         width: 50%;
     }
 
-    // view size med 3/6    
+    // VIEW SIZE [md, 3/6]    
     @include screenSizeBp(min-medium) {
         // not needed
     }
 
-    // view size large 4/6    
+    // VIEW SIZE [lg, 4/6]    
     @include screenSizeBp(min-large) {
         // not needed
     }
 
-    // view size xl 5/6    
+    // VIEW SIZE [xl, 5/6]    
     @include screenSizeBp(min-extralarge) {
-//        background-color: getColor(pb-main-bg-1);
+        background-color: getColor(pb-main-bg-1);
         width: 500px;
     }
 
-    // view size xxl 6/6   
+    // VIEW SIZE [xxl, 6/6]   
     @include screenSizeBp(min-extraextralarge) {
         // not needed
     }
 
-    // view size small 1/6
+    // VIEW SIZE [xs, 1/6]
+
+    h2, p {
+        margin: 0px;
+    }
+
     background-color: rgb(216, 194, 253);
     margin: 25px 0px 25px 0px;
     padding: 5px;
 
     .console-name {
-        color: purple;
+        color: getColor(con-name-1);
     }
-
+    
     .console-desc {
-        color: rgb(218, 68, 231);       
+        color: getColor(con-desc-1);
     }
 
 }
