--- a/pollingo/src/scss/5-modules/_PollBox.scss
+++ b/pollingo/src/scss/5-modules/_PollBox.scss
@@ -3,114 +3,113 @@
 @import "../1-helpers/_util_mixins";
 
 .pollbox-1 {
+  // view size small 2/6
+  @include screenSizeBp(min-small) {
+    background-color: getColor(pb-header-bg-1);
+    width: 600px;
+  }
 
-    // view size small 2/6    
-    @include screenSizeBp(min-small) {
-        background-color: getColor(pb-header-bg-1);        
-        width: 600px;
+  // view size med 3/6
+  @include screenSizeBp(min-medium) {
+    // not needed
+  }
+
+  // view size large 4/6
+  @include screenSizeBp(min-large) {
+    // not needed
+  }
+
+  // view size xl 5/6
+  @include screenSizeBp(min-extralarge) {
+    background-color: getColor(pb-main-bg-xl-1);
+    width: 600px;
+  }
+
+  // view size xxl 6/6
+  @include screenSizeBp(min-extraextralarge) {
+    // not needed
+  }
+
+  // VIEW small 1/6
+  margin: 5px 5px 5px 5px;
+  padding: 5px;
+  width: 95%;
+
+  display: grid;
+  grid-gap: 0.2em;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 18fr 1fr 1fr;
+  grid-template-areas:
+    "main main aside"
+    "main main aside"
+    "footer footer footer";
+
+  header {
+    grid-area: header;
+    background-color: getColor(pb-header-bg-1);
+    border: getSize(pb-border-1);
+    margin: auto;
+  }
+
+  nav {
+    grid-area: nav;
+    background-color: getColor(pb-nav-bg-1);
+    border: getSize(pb-border-1);
+    margin: auto;
+  }
+
+  main {
+    grid-area: main;
+    background-color: getColor(pb-main-bg-1);
+    border: getSize(pb-border-1);
+  }
+
+  aside {
+    grid-area: aside;
+    background-color: getColor(pb-header-bg-1);
+    border: getSize(pb-border-1);
+    margin: auto;
+  }
+
+  footer {
+    grid-area: footer;
+    border: getSize(pb-border-1);
+  }
+
+  .tabContainer {
+    width: 100%;
+    height: 150px;
+
+    .buttonContainer {
+      height: 20%;
+
+      button {
+        width: 25%;
+        height: 100%;
+        float: left;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        padding: 0px;
+        font-family: sans-serif;
+        font-size: 18px;
+        background-color: rgb(228, 120, 120);
+      }
+
+      button:hover {
+        background-color: rgb(255, 58, 58);
+      }
     }
-
-    // view size med 3/6    
-    @include screenSizeBp(min-medium) {
-        // not needed
+    .tabPanel {
+      height: 85%;
+      background-color: grey;
+      color: white;
+      text-align: center;
+      padding-top: 105px;
+      box-sizing: border-box;
+      font-family: sans-serif;
+      font-size: 22px;
+      display: none;
     }
-
-    // view size large 4/6    
-    @include screenSizeBp(min-large) {
-        // not needed
-    }
-
-    // view size xl 5/6    
-    @include screenSizeBp(min-extralarge) {
-        background-color: getColor(pb-main-bg-xl-1);
-        width: 600px;
-    }
-
-    // view size xxl 6/6   
-    @include screenSizeBp(min-extraextralarge) {
-        // not needed
-    }
-
-    // VIEW small 1/6
-    margin: 55px 5px 25px 5px;
-    padding: 5px;
-    width: 95%;
-
-    display: grid;
-    grid-gap: .20em;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 18fr 1fr 1fr;
-    grid-template-areas: 
-      "main main aside"
-      "main main aside"
-      "footer footer footer";
-
-    header{
-        grid-area: header;
-        background-color: getColor(pb-header-bg-1);
-        border: getSize(pb-border-1);
-        margin: auto;
-    }
-
-    nav{
-        grid-area: nav;
-        background-color: getColor(pb-nav-bg-1);
-        border: getSize(pb-border-1);
-        margin: auto;
-    }
-
-    main{
-        grid-area: main;
-        background-color: getColor(pb-main-bg-1);
-        border: getSize(pb-border-1);
-    }
-
-    aside{
-        grid-area: aside;
-        background-color: getColor(pb-header-bg-1);
-        border: getSize(pb-border-1);
-        margin: auto;        
-    }
-
-    footer{
-        grid-area: footer;
-        border: getSize(pb-border-1);
-    }
-
-    .tabContainer {
-        width: 100%;
-        height: 150px;
-
-        .buttonContainer {
-            height: 20%;
-            
-            button {
-                width: 25%;
-                height: 100%;
-                float: left;
-                border: none;
-                outline: none;
-                cursor: pointer;
-                padding: 0px;
-                font-family: sans-serif;
-                font-size: 18px;
-                background-color: rgb(228, 120, 120);
-            }
-
-            button:hover {
-                background-color: rgb(255, 58, 58);
-            }
-        }
-        .tabPanel {
-            height: 85%;
-            background-color: grey;
-            color:white;
-            text-align: center;
-            padding-top: 105px;
-            box-sizing: border-box;
-            font-family: sans-serif;
-            font-size: 22px;
-            display: none;
-        }
-    }  
+  }
 }
